--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@grafbase/sdk": "^0.6.1",
     "@headlessui/react": "^1.7.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.5.7",
@@ -25,8 +26,5 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
-  },
-  "devDependencies": {
-    "@grafbase/sdk": "^0.6.1"
   }
 }
