--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ NEXT_PUBLIC_GRAFBASE_API_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE2OT
 
 GOOGLE_CLIENT_ID=453077339938-8bre8fj0vmsldh9uoh4re6j3f3391h79.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+NEXTAUTH_SECRET=ubFGdI4xZXIyb4ThvgtXLEdgXoDRlHGVzH3wRJiAoSc=
+NEXTAUTH_URL=http://localhost:3000
