Fixing upload Image Error

--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ GOOGLE_CLIENT_SECRET=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
 
 NEXTAUTH_SECRET=ubFGdI4xZXIyb4ThvgtXLEdgXoDRlHGVzH3wRJiAoSc=
 NEXTAUTH_URL=http://localhost:3000
+
+CLOUDINARY_NAME=dm6tz47yy, 
+CLOUDINARY_API_KEY= 631765861464236, 
+CLOUDINARY_API_SECRET= 4iUtfZ706DzxoqBZDKFwn2YCsLc
